syntax = "proto3";

package ibc.lightclients.ibft2.v1;

option go_package = "pkg/ibc/client/ibft2";

import "solidity-protobuf-extensions.proto";
option (.solidity.file_options) = { dirpath: "contracts/core/types" };

message ClientState {
  string chain_id = 1;
  bytes ibc_store_address = 2;
  uint64 latest_height = 3;
}

message ConsensusState {
  uint64 timestamp = 1;
  bytes root = 2;
  repeated bytes validators = 3;
}

message Header {
  bytes besu_header_rlp = 1;
  repeated bytes seals = 2;
  uint64 trusted_height = 3;
  bytes account_state_proof = 4;
}
